linagora/lgs/openpaas/linagora.esn.group#9 prevent form content from being overlapped by check mark icon

--- a/frontend/css/modules/form-helper.less
+++ b/frontend/css/modules/form-helper.less
@@ -36,6 +36,7 @@ esn-form-group {
     background-size: 1.5em;
     background-position: right center;
     background-repeat: no-repeat;
+    padding-right: 25px;
   }
 }
 
